--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "vercel-build": "npm install --legacy-peer-deps && nest build"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -24,8 +25,8 @@
     "@types/ws": "^8.18.0",
     "axios": "^1.5.0",
     "mongoose": "^7.5.0",
-    "nestjs-telegraf": "^2.7.0",
-    "reflect-metadata": "^0.2.2",
+    "nestjs-telegraf": "2.7.0",
+    "reflect-metadata": "0.2.2",
     "rxjs": "^7.8.1",
     "telegraf": "^4.12.2",
     "ws": "^8.18.1",
