--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
     {
       "src": "/api/webhook",
       "dest": "/api/webhook.ts"
+    },
+    {
+      "src": "/api/simple-webhook",
+      "dest": "/api/simple-webhook.ts"
     }
   ],
   "env": {
