Add test API endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,10 @@
       "dest": "/api/simple-webhook.ts"
     },
     {
+      "src": "/api/test",
+      "dest": "/api/test.ts"
+    },
+    {
       "src": "/",
       "dest": "/public/index.html"
     }
