--- a/vercel.json
+++ b/vercel.json
@@ -1,45 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/edge.js": {
-      "runtime": "edge"
-    }
-  },
-  "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node",
-      "config": {
-        "buildCommand": "npm install --legacy-peer-deps && npm run build"
-      }
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/webhook",
-      "dest": "/api/webhook.ts"
-    },
-    {
-      "src": "/api/simple-webhook",
-      "dest": "/api/simple-webhook.ts"
-    },
-    {
-      "src": "/api/test",
-      "dest": "/api/test.ts"
-    },
-    {
-      "src": "/api/edge",
-      "dest": "/api/edge.js"
-    },
-    {
-      "src": "/",
-      "dest": "/public/index.html"
-    }
-  ],
+  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "env": {
     "VERCEL": "true",
     "TELEGRAM_BOT_TOKEN": "1875537160:AAE27T3oiuUcw1zVFT0wtF_TBeDtwcUkXqg"
