--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/schedule": "^3.0.0",
     "@types/ws": "^8.18.0",
     "axios": "^1.8.4",
+    "mongodb": "^6.15.0",
     "mongoose": "^7.5.0",
     "nestjs-telegraf": "2.7.0",
     "reflect-metadata": "0.2.2",
